--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,30 @@
-# Created by https://www.gitignore.io/api/xcode
+# Created by https://www.gitignore.io/api/macos
 
-### Xcode ###
-# Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+### macOS ###
+*.DS_Store
+.AppleDouble
+.LSOverride
 
-.DS_Store
+# Icon must end with two \r
+Icon
 
-## Build generated
-build/
-DerivedData/
+# Thumbnails
+._*
 
-## Various settings
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata/
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
-## Other
-*.moved-aside
-*.xccheckout
-*.xcscmblueprint
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
-### Xcode Patch ###
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
-!*.xcworkspace/contents.xcworkspacedata
-/*.gcno
-
-# End of https://www.gitignore.io/api/xcode
+# End of https://www.gitignore.io/api/macos
