--- a/Resibeam/Info.plist
+++ b/Resibeam/Info.plist
@@ -44,7 +44,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.7.4</string>
+	<string>2.0.0</string>
 	<key>CFBundleVersion</key>
 	<string>170606</string>
 	<key>LSApplicationCategoryType</key>
@@ -52,7 +52,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 Mark Walker. All rights reserved.</string>
+	<string>Copyright © 2017 Mark D. Walker. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
